fix(timers): minor spacing and css tweaks

--- a/src/index.css
+++ b/src/index.css
@@ -158,11 +158,11 @@ body {
   animation-timing-function: ease-in-out;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   left: 0;
   margin: 0 auto;
-  max-width: 20rem;
-  padding: var(--spacing-base) calc(var(--spacing-base) / 2) 0;
+  max-width: 18rem;
+  padding: var(--spacing-base) 0;
   position: absolute;
   right: 0;
   top: 0;
@@ -222,7 +222,7 @@ body {
   font-size: 1rem;
   font-weight: bold;
   height: var(--size);
-  margin: calc(var(--spacing-small) / 2);
+  margin-bottom: var(--spacing-small);
   outline: 0;
   transition: background-color var(--transition-base);
 }
